--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,93 @@
 /* You can add global styles to this file, and also import other style files */
+/* (e.g. src/styles.scss) to this file. */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+    height: 100%;
+}
 
+body {
+    margin: 0;
+    min-width: 200px;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.main-canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flow-root;
+    justify-content: center;
+    align-items: center;
+    z-index: 300;
+
+}
+
+div.app-background {
+    background: linear-gradient(to right, #BFE9FE, #D5ECF7);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 12px;
+    box-sizing: border-box;
+    box-shadow: 0px 2px 3px 0px #0000003f;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.frame-logo {
+
+    min-width: 20%;
+    max-width: 50%;
+    min-height: 20%;
+    max-height: 50%;
+    width: 30%;
+    height: 30%;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    background-image: url('assets/Media/logo.OrbitalIQ.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    z-index: 100;
+    display: flex;
+
+}
+
+.frame-debug {
+    border: 3px solid fuchsia;
+    background-color: rgba(9, 160, 67, 0.473);
+}
+
+.mat-flat-button {
+    margin: 15px 8px;
+    padding: 8px 5px;
+    width: 200px;
+    min-width: 20%;
+    max-width: 80%;
+
+    border-radius: 50px;
+    border: 5px solid #ffda6d;
+
+    font-size: xx-large;
+    font-family: Poppins;
+    letter-spacing: 0%;
+    text-decoration: solid;
+    text-shadow: #b89c4b 1px 1px 2px;
+    font-weight: 600;
+    text-align: center;
+    text-wrap: nowrap;
+}
+
+.mat-flat-button.mat-primary {
+    background-color: #ffda6d !important;
+    /* Example blue color */
+    color: #ffffff !important;
+
+}
