--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,14 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <div>
-  <router-outlet />
+  <!-- <div class=" mt-3">
+    <button mat-icon-button (click)="sidenav.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+  </div> -->
+
+
+ 
+
+<router-outlet></router-outlet>
 </div>
