--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,13 @@
-<div class="main-canvas d-flex flex-column  align-items-center">
-    <div class="flex-grow-1  flex-fill  ">
+<div class="main-canvas d-flex flex-column   align-items-end align-items-center ">
 
-    </div>
-    <div class="m-1 frame-bottom d-flex flex-column  align-items-center">
+    <div class="p-2  flex-grow-1 ">
         <h1>home works!</h1>
     </div>
-</div>
+    <div class="m-1 frame-bottom d-flex flex-column  align-items-center flex-grow-1 ">
+        <div class="p-2">
+            <h1>footer works!</h1>
+        </div>
+        <div class="p-2">
+            <app-navigation-bar></app-navigation-bar>
+        </div>
+    </div>
