--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,16 +1,13 @@
-div.app-background {
-    background: linear-gradient(to right, #BFE9FE, #D5ECF7);
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 12px;
-    box-sizing: border-box;
-    box-shadow: 0px 2px 3px 0px #0000003f;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
+.container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
- 
+.container .mat-drawer {
+    padding-left: 20px;
+    padding-right: 20px;
+    min-width: 200px;
+}
