--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="main-canvas d-flex flex-column   align-items-end align-items-center ">
+<div class="page-canvas d-flex flex-column   align-items-end align-items-center ">
 
     <div class="p-2  flex-grow-1 ">
         <h1>home works!</h1>
