--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="m-1 frame-bottom d-flex flex-column  align-items-center flex-grow-1 ">
         <div class="p-2">
-            <h1>footer works!</h1>
+            <app-pm-item>   </app-pm-item>
         </div>
         <div class="p-2">
             <app-navigation-bar></app-navigation-bar>
