--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,11 +1,14 @@
-<div class="page-canvas d-flex flex-column   align-items-end align-items-center ">
+<div class="page-canvas   ">
+    <div class="main-header"></div>
+    <div class="main-content  ">
+        <div class="">
+            <app-pm-container> </app-pm-container>
+        </div>
 
-    <div class="p-2  flex-grow-1 ">
-        <h1>home works!</h1>
     </div>
-    <div class="m-1 frame-bottom d-flex flex-column  align-items-center flex-grow-1 ">
+    <div class="row-2 frame-bottom  ">
         <div class="p-2">
-            <app-pm-item>   </app-pm-item>
+
         </div>
         <div class="p-2">
             <app-navigation-bar></app-navigation-bar>
