--- a/src/styles.css
+++ b/src/styles.css
@@ -30,8 +30,8 @@ body {
     position: absolute;
     top: 15%;
     left: 0;
-    width: 100%;
-    height: 100%;
+    bottom: 0px;
+    width: -webkit-fill-available;
     display: flow-root;
     justify-content: center;
     align-items: center;
@@ -175,6 +175,10 @@ div.app-background {
 
 
 .frame-bottom {
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    position: absolute;
     padding: 22px 10px 5px 10px;
     display: flex;
     flex-direction: column;
