--- a/src/app/components/pm-item/pm-item.component.html
+++ b/src/app/components/pm-item/pm-item.component.html
@@ -50,5 +50,9 @@
 
             </div>
         </div>
+        <div class="card-size-intr  text-center  row">
+            <div *ngIf="!pmItem" class="align-self-center"> loading <mat-progress-bar mode="buffer"></mat-progress-bar>
+            </div>
+        </div>
     </div>
 </div>
