--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,8 +7,8 @@
 
     </div>
     <div class="row-2 frame-bottom  ">
-        <div class="p-2">
-
+        <div class="m-4 container ">
+            <app-trans-list></app-trans-list>
         </div>
         <div class="p-2">
             <app-navigation-bar></app-navigation-bar>
