--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -1,11 +1,14 @@
 <div>
-    <p>navigation-bar works!</p>
+
     <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="gappx">
     </div>
-    <div class=" d-flex  flex-grow-1 ">
-        <a class="  p-2 " routerLink="/home" routerLinkActive="active"><mat-icon>home</mat-icon></a>
-        <a class="  p-2 " routerLink="/about" routerLinkActive="active"><mat-icon>wallet</mat-icon></a>
-        <a class="  p-2 " routerLink="/contact" routerLinkActive="active"><mat-icon>refresh</mat-icon></a>
-        <a class="  p-2 " routerLink="/contact" routerLinkActive="active"><mat-icon>settings</mat-icon></a>
-    </div>
+
+    <button mat-fab class="p-2"> <a class="p-2" routerLink="/home"
+            routerLinkActive="active"><mat-icon>home</mat-icon></a></button>
+    <button mat-fab class="p-2"> <a class="  p-2 " routerLink="/about"
+            routerLinkActive="active"><mat-icon>wallet</mat-icon></a></button>
+    <button mat-fab class="p-2"> <a class="  p-2 " routerLink="/contact"
+            routerLinkActive="active"><mat-icon>refresh</mat-icon></a></button>
+    <button mat-fab class="p-2"> <a class="  p-2 " routerLink="/contact"
+            routerLinkActive="active"><mat-icon>settings</mat-icon></a></button>
 </div>
