--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,8 @@ body {
     position: absolute;
     top: 0;
     left: 0;
+    right: 0;
+    bottom: 0;
     width: 100%;
     height: 100%;
     display: flow-root;
@@ -54,10 +56,10 @@ body {
 
 .main-content {
     width: -webkit-fill-available;
-    height: -webkit-fill-available;
-    left: 0px;
-    right: 0px;
-    bottom: 0px;
+   top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
 div.app-background {
