--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -30,7 +30,7 @@
     </div>
     <div class="manu-nav-container mid align-self-start  col-4 ">
 
-        <button mat-fab class="p-2" routerLink="/contact" routerLinkActive="active">
+        <button mat-fab class="p-2"  (click)="AddEvent()">
             <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect width="60" height="60" rx="30" fill="#FFD65F" />
                 <rect width="60" height="60" rx="30" fill="#FFD65F" />
