add pages and routs

--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -44,7 +44,7 @@
     </div>
     <div class="manu-nav-container  right col-4  ">
 
-        <button type="button" title="Payment" mat-fab class="p-2" routerLink="/Payment">
+        <button type="button" title="Payment" mat-fab class="p-2" routerLink="/payment">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#clip0_522_999)">
                     <path
