--- a/src/app/pages/wallet-page/wallet-page.component.html
+++ b/src/app/pages/wallet-page/wallet-page.component.html
@@ -1,13 +1,12 @@
-
 <div class="main-content ">
-<p>wallet-page works!</p>
+    <app-pm-container> </app-pm-container>
 </div>
 <div class=" frame-bottom   ">
     <div class="  container ">
 
     </div>
     <div class="  ">
-        <app-navigation-bar [disableAddButton]="false"></app-navigation-bar>
+        <app-navigation-bar (onAddEvent)="AddNewCard()" [disableAddButton]="false"></app-navigation-bar>
 
     </div>
 </div>
