--- a/src/app/pages/wallet-page/wallet-page.component.html
+++ b/src/app/pages/wallet-page/wallet-page.component.html
@@ -30,8 +30,7 @@
                 <mat-form-field class="half-width ">
                     <mat-label>Expiration Date</mat-label>
                     <input id="cc-exp-date" type="tel" autocomplete="cc-exp" ccExp matInput
-                        placeholder="Expiration Date MM/YY" formControlName="expirationDateCtrl" required
-                        expDateMask>
+                        placeholder="Expiration Date MM/YY" formControlName="expirationDateCtrl" required expDateMask>
                 </mat-form-field>
 
                 <mat-form-field class=" half-width  ">
@@ -45,13 +44,13 @@
                 <mat-form-field class="large-width">
                     <mat-label>Card Holder</mat-label>
                     <input type="tel" autocomplete="name" matInput placeholder="Card Holder"
-                        formControlName="cardHolderCtrl" required>
+                        formControlName="cardHolderCtrl" required  >
                 </mat-form-field>
 
                 <mat-form-field class="small-width">
                     <mat-label>Card Holder ZIP</mat-label>
                     <input type="tel" autocomplete="postal-code" matInput placeholder=" Card Holder ZIP code"
-                        formControlName="cardHolderZIP" required>
+                        formControlName="cardHolderZIP" required  >
                 </mat-form-field>
             </div>
         </mat-card-content>
