--- a/src/app/pages/wallet-page/wallet-page.component.html
+++ b/src/app/pages/wallet-page/wallet-page.component.html
@@ -1,67 +1,21 @@
-<div *ngIf="!NewCardStete" class="main-content ">
-    <app-pm-container [currentCardId]="currentCard"> </app-pm-container>
+<div *ngIf="!topupState" class="main-content ">
+    <div class="  container ">
+        <span>wallet is empty</span>
+
+    </div>
 </div>
 <div class=" frame-bottom   ">
     <div class="  container ">
-
+        <h1>wallet </h1>
     </div>
     <div class="  ">
-        <app-navigation-bar (onAddEvent)="AddNewCard()" [disableAddButton]="NewCardStete"></app-navigation-bar>
+        <app-navigation-bar (onAddEvent)="StartTopup()" [disableAddButton]="topupState"></app-navigation-bar>
 
     </div>
 </div>
-<div *ngIf="NewCardStete" class="main-content ">
-    <app-add-credit-card (onAddEvent)="addCardEvent($event)"></app-add-credit-card>
+<div *ngIf="topupState" class="main-content ">
+    <div class="  container ">
+        <span>StartTopup</span>
+    </div>
 
 </div>
-
-
-
-<!-- <mat-card>
-        <mat-card-header>
-            <mat-card-title>Adding new Card</mat-card-title>
-            <mat-card-subtitle>Creadit card Detils</mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-content [formGroup]="cardNumberCtrlGroup">
-            <div class="side-by-side ">
-                <mat-form-field class="full-width">
-                    <mat-label>Card Number</mat-label>
-                    <input id="cc-number" type="tel" autocomplete="cc-number" ccNumber matInput
-                        placeholder="Card Number" formControlName="cardNumberCtrl" required>
-                </mat-form-field>
-            </div>
-
-            <div class="side-by-side ">
-                <mat-form-field class="half-width ">
-                    <mat-label>Expiration Date</mat-label>
-                    <input id="cc-exp-date" type="tel" autocomplete="cc-exp" ccExp matInput
-                        placeholder="Expiration Date MM/YY" formControlName="expirationDateCtrl" required expDateMask>
-                </mat-form-field>
-
-                <mat-form-field class=" half-width  ">
-                    <mat-label>CCV Number</mat-label>
-                    <input id="cc-cvc" type="tel" autocomplete="off" ccCvc matInput placeholder="CVV Number"
-                        formControlName="ccvCtrl" required>
-                </mat-form-field>
-            </div>
-
-            <div class="side-by-side">
-                <mat-form-field class="large-width">
-                    <mat-label>Card Holder</mat-label>
-                    <input type="tel" autocomplete="name" matInput placeholder="Card Holder"
-                        formControlName="cardHolderCtrl" required  >
-                </mat-form-field>
-
-                <mat-form-field class="small-width">
-                    <mat-label>Card Holder ZIP</mat-label>
-                    <input type="tel" autocomplete="postal-code" matInput placeholder=" Card Holder ZIP code"
-                        formControlName="cardHolderZIP" required  >
-                </mat-form-field>
-            </div>
-        </mat-card-content>
-        <mat-card-actions>
-            <button mat-button color="primary" (click)="CancleAddCard()">Cancel</button>
-            <button mat-button color="primary" [disabled]="cardNumberCtrlGroup.invalid"
-                (click)="saveNewCard()">Save</button>
-        </mat-card-actions>
-    </mat-card> -->
