--- a/src/app/pages/wallet-page/wallet-page.component.html
+++ b/src/app/pages/wallet-page/wallet-page.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="!topupState" class="main-content ">
-    <div class="  container ">
-        <span>wallet is empty</span>
+    <div class="  container   ">
+        <span class=" ">{{this.OTFTag$ | async}}</span>
 
     </div>
 </div>
