--- a/src/app/pages/wallet-page/wallet-page.component.css
+++ b/src/app/pages/wallet-page/wallet-page.component.css
@@ -1,2 +1,8 @@
 
-
+ .container {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   height: 100%;
+   min-height: 300px;
+ }
